feat: 라이브 매물 조회시 id 반환 [S12P11D205-278]